# sim

./: .gitignore  AGENTS.md  AGENT_LOG.md  BUGS.md  CONTEXT.md  Cargo.toml  DESIGN.md  EXTENSIONS.md  IDEA.md  PLAN.md  README.md  ROADMAP.md  mix.exs
.my-agent/: Dockerfile  OTP-PUB-KEY.hrl  config.yml
.my-agent/scripts/: pg-start.sh
apps/game_core/: .gitignore  README.md  mix.exs
apps/game_persistence/: .gitignore  README.md  mix.exs
apps/game_web/: .gitignore  README.md  mix.exs
client/: Cargo.toml
client/src/: conn.rs  dev.rs  displayed_world.rs  lib.rs  mirror.rs  model.rs  pose.rs  render.rs  session.rs  showcase.rs
client/tests/: exactness.rs  integration.rs  showcase.rs
config/: config.exs  dev.exs  e2e.exs  prod.exs  runtime.exs  test.exs
contract/: contract.json
design/: backpressure-freeze.html  economy.md  glossary.md  living-world.md  overview.md  shared-world.md  targeting-and-wysiwyg.md  vision.md
docs/: frontend-port-notes.md
docs/adr/: 0001-islands-and-cartographer.md  0002-rust-clustered-simulation-runtime.md  0003-native-rust-client.md  0004-npc-motivation-arbitration.md  0005-npcs-not-warm-set-anchors.md  0006-cold-ecosystem-deterministic-field.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.rust.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: phase1.spec.ts  phase3.spec.ts  phase4.spec.ts  phase5.spec.ts  types.ts  (+4 more)
messages/: designer-to-engineer-doc-cleanup.md  designer-to-product_owner-initial-design-baseline.md  engineer-to-human-increment-summary.md  engineer-to-product_owner-backpressure-not-wired.md  engineer-to-product_owner-stories-readme-stale-links.md  product_owner-to-designer-instances-and-authority-gaps.md  product_owner-to-engineer-initial-stories.md
protocol/: Cargo.toml
sim/: Cargo.toml  README.md
sim/src/: actions.rs  cartographer.rs  catalogue.rs  chunkgraph.rs  collision.rs  components.rs  contract.rs  datastore.rs  delta.rs  dev.rs  ecosystem.rs  geometry.rs  harness.rs  ids.rs  labeler.rs  lib.rs  motivation.rs  parallel.rs  pgstore.rs  repack.rs  server.rs  sim.rs  transport.rs  verbs.rs  wire.rs  world.rs  worldgen.rs
sim/tests/: actions.rs  ceiling.rs  chunk_reload.rs  contract.rs  core_model.rs  ecosystem_world.rs  fault_tolerance.rs  npc.rs  parallel.rs  persistence.rs  pg_restart.rs  stories.rs  topology.rs  verbs.rs  wire_server.rs
simcore/: Cargo.toml
simcore/src/: catalogue.rs  collision.rs  lib.rs  motion.rs
stories/: README.md  build-structure.feature  connect-and-resume.feature  continuous-movement.feature  damage-structure.feature  emergent-behaviours.feature  harvest-carcass.feature  harvest-resource-node.feature  instances.feature  npc-needs-behaviour.feature  overload-backpressure.feature  region-depletion-and-healing.feature  seamless-world.feature  wildlife-materialize-dissolve.feature  world-persistence.feature
(+129 files in other folders)
