[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Native game client (three-d + egui) for the sim server — see docs/adr/0003"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
protocol = { path = "../protocol" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

[dev-dependencies]
sim = { path = "../sim" }
