[package]
name = "sim"
version = "0.1.0"
edition = "2021"
description = "Interaction-clustered simulation — Rust shared-memory prototype (see IDEA.md)"

[dependencies]
hecs = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]

[profile.release]
opt-level = 3
